Add new blog posts

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,13 @@
 ---
-name: Tails Azimuth
+name: Rajika Chathuranga
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Full-Stack Developer
+company: IXD Labs
+email: lprajika@gmail.com
+linkedin: hhttps://www.linkedin.com/in/rajika-chathuranga/
+github: https://github.com/rajika97
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Hey, I'm Rajika Chathuranga, a Full-Stack Developer, currently pursuing Master's Degree in Advanced Software Engineering at the University of Westminster. Started off at the University of Moratuwa in Sri Lanka for my Bachelor's – that's where the coding journey kicked in.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Right now, I'm doing the software hustle at IXD Labs, a cool startup in Sri Lanka. My gig? Software Engineer. I'm all about whipping up web apps that aren't just functional but actually make sense to real people. It's the sweet spot where tech meets user-friendly vibes, and I'm here for it, one line of code at a time.
