Add new project - Newscraper

--- a/data/blog/Promptium - Your AI Prompt Oasis.mdx
+++ b/data/blog/Promptium - Your AI Prompt Oasis.mdx
@@ -1,7 +1,7 @@
 ---
 title: Promptium - Your AI Prompt Oasis! 🤖
 date: '2023-11-01'
-tags: ['nextjs', 'googleauth', 'responsive']
+tags: ['projects', nextjs', 'googleauth']
 draft: false
 summary: An individual project
 ---
