Create a new blog article

--- a/data/blog/LeetCode - Part 1 - Median of Two Sorted Arrays.mdx
+++ b/data/blog/LeetCode - Part 1 - Median of Two Sorted Arrays.mdx
@@ -1,7 +1,7 @@
 ---
 title: LeetCode - Part 1 - Median of Two Sorted Arrays
 date: '2023-12-03'
-tags: ['leetcode', 'python', 'binary search']
+tags: ['leetcode', 'python']
 draft: false
 ---
 
