Modify an article

--- a/data/blog/Newscraper.mdx
+++ b/data/blog/Newscraper.mdx
@@ -1,75 +1,41 @@
 ---
-title: Unveiling Newscraper - Your Gateway to Seamless News Exploration 🌐
+title: Newscraper - Your Simplified News Companion 🌐📰
 date: '2023-11-18'
-tags: ['projects', 'webscraping', 'puppeteer']
+tags: ['projects', 'webscraping']
 draft: false
 summary: An individual project
 ---
 
-Hey there, news enthusiasts! Have you ever wished for a one-stop solution to keep up with the latest updates without jumping from one website to another? Well, your wish just came true with **Newscraper** - a web application designed to transform your news browsing experience!
+Hey folks! Ever found yourself drowning in the sea of news websites, desperately trying to catch up with the latest happenings? I sure have, and that's why I've got something exciting to share with you – "Newscraper"!
 
-## The Genesis
+## The Backstory
 
-Imagine this - you wake up in the morning, grab your cup of coffee, and instead of juggling multiple tabs on your browser, you open Newscraper. All the latest news, neatly curated and ready for your perusal. No more switching between websites, no more hassle. Sounds like a dream? Not anymore.
+Picture this: endless clicks, annoying ads, and the never-ending hunt for unbiased news. Ugh, right? That's exactly why I decided to roll up my sleeves and create a solution. Say hello to [Newscraper](https://newscraper.rajika.pro/) – your go-to spot for real-time news from various sources, all in one neat place.
 
-## The Newscraper Experience
+### What Makes It Awesome:
 
-### Real-Time Updates 🚀
+- **Stay Up-to-Date:** Get the scoop on the latest happenings as they unfold.
 
-With Newscraper, you're not just getting news; you're getting real-time updates. Stay in the loop with what's happening around the world without missing a beat.
+- **Ditch the Hassle:** No more jumping between websites; we've got you covered in one cozy corner of the internet.
 
-### User-Friendly Interface 🌈
+- **Ad-Free Bliss:** Wave goodbye to those pesky ads that love to crash the news party.
 
-Navigating through news articles has never been this smooth. The user-friendly interface of Newscraper ensures that you can effortlessly browse and read articles from various sources.
+## How It Works
 
-### Techstack Magic 🔧
+Head over to [Newscraper](https://newscraper.rajika.pro/) and experience news browsing like never before. It's designed to be simple, clutter-free, and user-friendly. No rocket science – just news when you want it, how you want it.
 
-Behind the scenes, Newscraper leverages cutting-edge technology to make your news exploration seamless:
+## Join the "Newscraper" Community 🚀
 
-- **Puppeteer:** A Node.js library that powers the seamless web scraping, ensuring you get the latest information.
-- **Node.js:** Fueling the backend development for a robust and efficient performance.
-- **React.js:** Crafting a stunning and responsive user interface that adapts to your needs.
-- **Tailwind CSS:** Redefining styling to make your news-reading experience visually appealing.
+What sets "Newscraper" apart? It's not just a project; it's a vibe. We're open source and thriving on the energy of contributors like you. Fancy making news-reading even more awesome? Dive into the [GitHub Repository](https://github.com/rajika97/newscraper-lk) and let's cook up some magic together.
 
-## Screenshots of the application
+## Your Ticket to Contribution
 
-![Home Page](/static/images/Newscraper-Screenshot1.jpg)
+Got ideas to make "Newscraper" even cooler? We're all ears! Whether it's a sleek new feature, a design tweak, or just a friendly suggestion, your input matters. Let's make "Newscraper" the community's project, shaped by real people who love hassle-free news.
 
-![News Page](/static/images/Newscraper-Screenshot2.jpg)
+## Ready to Dive In?
 
-## Installation Journey
+Enough talk – experience it yourself! Click [here](https://newscraper.rajika.pro/) to explore "Newscraper" and redefine your news-reading game.
 
-Ready to embark on the Newscraper experience locally? Follow these simple steps:
+Let's build a space where news is exciting, accessible, and ad-free. Join me in this adventure, and let's make "Newscraper" the news buddy we all deserve!
 
-1. **Clone the Repository:**
-
-   ```bash
-   git clone https://github.com/rajika97/newscraper-lk.git
-   ```
-
-2. **Navigate to the Project Directory:**
-
-   ```bash
-   cd newscraper-lk
-   ```
-
-3. **Backend Setup:**
-
-   ```bash
-   cd backend
-   npm install
-   npm run dev
-   ```
-
-4. **Your Newscraper backend** should now be running at http://localhost:3000.
-
-5. **Frontend Setup:**
-
-   ```bash
-   cd ..
-   cd frontend
-   npm install
-   npm run dev
-   ```
-
-6. **Your Newscraper frontend** should now be running at http://localhost:5173.
+_Catch up with us on [GitHub](https://github.com/rajika97/newscraper-lk) and let's shape the future of "Newscraper" together._ 🚀
